syntax = "proto3";

package apisyniq;

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.apisyniq.grpc";
option java_outer_classname = "ControllerOutputProto";

message InputData {
    string name = 1;
    string endpoint = 2;
    string httpMethod = 3;
    repeated string tags = 4;
    string description = 5;
    string returnDescription = 6;
    InputsDto inputsDescribe = 7;
    string responseBody = 8;
    bool autoExecute = 9;
    InputsDto inputs = 10;
    string outputBody = 11;
    repeated string filteringTags = 12;
    map<string, DtoSchema> dtoSchemas = 13;
    map<string, DescribeDto> describeDtosForParms= 14;
}


message InputsDto {
    map<string, string> inputBody = 1;
    map<string, string> inputPathParams = 2;
    map<string, string> inputQueryParams = 3;
    map<string, string> inputVariables = 4;
    map<string, string> inputHeaders = 5;
    map<string, string> inputCookies = 6;
}

message DtoSchema {
    string className = 1;
    string name = 2;
    string description = 3;
    string example = 4;
    repeated DescribeDto fields = 5;
}

message DescribeDto {
    string name = 1;
    string description = 2;
    string dataType = 3;
    string defaultValue = 4;
    string options = 5;
    bool autoExecute = 6;
    string example = 7;
}